objects/custom_object_1__c.object
<CustomObject>
    <fields>
        <fullName>custom_field__c</fullName>
        <label>custom_field</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>diz_date_test__c</fullName>
        <description>test</description>
        <label>diz_date_test__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_text__c</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>custom_object_1</label>
    <nameField>
        <label>custom_object_1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custom_object_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>